widlar current source name corrected

--- a/tex/electronicsDifferencePair.tex
+++ b/tex/electronicsDifferencePair.tex
@@ -56,7 +56,7 @@ I &=\SI{2}{\milli \ampere} & \alpha &=\num{0.99}
 \end{align*}
 ہیں۔تفرقی جوڑی کے تمام برقی دباو اور برقی رو حاصل کریں۔
 
-حل:	منبع مستقل برقی رو کی برقی رو کی قیمت \عددی{2 \times I=\SI{4}{\milli \ampere}} ہے۔چونکہ دونوں ٹرانزسٹر کے بیس  سرے برابر برقی دباو یعنی   \عددی{\SI{3}{\volt}}پر ہیں لہٰذا \عددی{V_{BE}=\SI{0.7}{\volt}}  لیتے ہوئے
+حل:	منبع رو \عددی{2 \times I=\SI{4}{\milli \ampere}} رو پیدا کرتی ہے۔چونکہ دونوں ٹرانزسٹر کے بیس  سرے برابر برقی دباو یعنی   \عددی{\SI{3}{\volt}}پر ہیں لہٰذا \عددی{V_{BE}=\SI{0.7}{\volt}}  لیتے ہوئے
 \begin{align*}
 v_E=3-0.7=\SI{2.3}{\volt}
 \end{align*}
@@ -70,7 +70,7 @@ i_{C1}&=i_{C2}=\alpha \times \SI{2}{\milli \ampere}=0.99 \times \SI{2}{\milli \a
 v_{C1}&=v_{C2}=15-1.98\times 10^{-3} \times 3.9 \times 10^3=\SI{7.3}{\volt}\\
 v_o&=v_{C2}-v_{C1}=7.3-7.3=\SI{0}{\volt}
 \end{align*}
-یہاں منبع مستقل برقی رو کے سروں پر \عددی{\SI{2.3}{\volt}}  اور \عددی{\SI{-15}{\volt}} ہونے سے اس پر 
+یہاں منبع رو کے سروں پر \عددی{\SI{2.3}{\volt}}  اور \عددی{\SI{-15}{\volt}} ہونے سے اس پر 
 \begin{align*}
 2.3-(-15)=\SI{17.3}{\volt}
 \end{align*}
@@ -125,7 +125,7 @@ v_o&=v_{C2}-v_{C1}=+2 \alpha I R_C
 \caption{ تفرقی اشارہ کے موجودگی میں تفرقی جوڑے کی کارکردگی}
 \label{شکل_تفرقی_اشارے_کی_موجودگی_میں_تفرقی_جوڑے_کی_کارکردگی}
 \end{figure}
-تفرقی جوڑے کے دونوں دخول صفر وولٹ ہونے کی صورت میں \عددی{v_E=\SI{-0.7}{\volt}} ہوتا ہے۔اب اگر \عددی{v_{B2}=\SI{0}{\volt}} رکھتے ہوئے  \عددی{v_{B1}=\SI{-0.9}{\volt}} کر دیا جائے تو \عددی{Q_2} کا بیس-ایمٹر جوڑ سیدھا مائل ہو جائے گا لہٰذا \عددی{v_E=\SI{-0.7}{\volt}} ہو گا۔یوں \عددی{Q_1} کے بیس  سرے پر \عددی{\SI{-0.9}{\volt}} جبکہ اس کے ایمٹر سرے پر \عددی{\SI{-0.7}{\volt}} ہونے کی وجہ سے یہ منقطع صورت اختیار کر لے گا۔یہ صورت شکل \حوالہ{شکل_تفرقی_اشارے_کی_موجودگی_میں_تفرقی_جوڑے_کی_کارکردگی} ب میں دکھائی گئی ہے۔یوں منبع مستقل برقی رو کی پیدا شدہ تمام برقی رو (یعنی \عددی{2 \times I} ) ٹرانزسٹر \عددی{Q_2} کو منتقل ہو جائے گی۔اس طرح
+تفرقی جوڑے کے دونوں دخول صفر وولٹ ہونے کی صورت میں \عددی{v_E=\SI{-0.7}{\volt}} ہوتا ہے۔اب اگر \عددی{v_{B2}=\SI{0}{\volt}} رکھتے ہوئے  \عددی{v_{B1}=\SI{-0.9}{\volt}} کر دیا جائے تو \عددی{Q_2} کا بیس-ایمٹر جوڑ سیدھا مائل ہو جائے گا لہٰذا \عددی{v_E=\SI{-0.7}{\volt}} ہو گا۔یوں \عددی{Q_1} کے بیس  سرے پر \عددی{\SI{-0.9}{\volt}} جبکہ اس کے ایمٹر سرے پر \عددی{\SI{-0.7}{\volt}} ہونے کی وجہ سے یہ منقطع صورت اختیار کر لے گا۔یہ صورت شکل \حوالہ{شکل_تفرقی_اشارے_کی_موجودگی_میں_تفرقی_جوڑے_کی_کارکردگی} ب میں دکھائی گئی ہے۔یوں منبع رو کی تمام برقی رو (یعنی \عددی{2 \times I} ) ٹرانزسٹر \عددی{Q_2} کو منتقل ہو جائے گی۔اس طرح
 \begin{align*}
 i_{E1}&=0\\
 i_{E2}&=2 I\\
@@ -446,7 +446,7 @@ i_b=\frac{i_e}{\beta+1}=\frac{1}{\beta+1} \left(\frac{v_d}{2 r_e +2 R_E} \right 
 \begin{align}
 R_{id}=\frac{v_d}{i_b}=\left(\beta+1 \right ) \left(2 r_e+2 R_E \right )
 \end{align}
-اب تک ہم تصور کرتے رہے ہیں کہ تفرقی ایمپلیفائر میں استعمال کئے جانے والے منبع مستقل برقی رو کی اندرونی مزاحمت لامحدود ہوتی ہے۔حقیقت میں پائے جانے والے منبع مستقل برقی رو کی اندرونی مزاحمت نہایت زیادہ مگر محدود ہوتی ہے۔شکل \حوالہ{شکل_باریک_اشاراتی_مزاحمت_کو_زیر_نظر} الف میں پیداکار مستقل برقی رو کا مساوی \اصطلاح {نارٹن دور}\حاشیہب{Norton equivalent} استعمال کرتے ہوئے اس کے اندرونی باریک اشاراتی مزاحمت  \عددی{R} کو بھی شامل کیا گیا ہے۔اس شکل میں ٹرانزسٹر کا اندرونی مزاحمت  \عددی{r_e} کو تفرقی جوڑے کے اندر جانب فرضی طور دکھایا گیا ہے۔شکل \حوالہ{شکل_باریک_اشاراتی_مزاحمت_کو_زیر_نظر} ب میں اس ایمپلیفائر کے داخلی جانب کا باریک اشاراتی ماڈل دکھایا گیا ہے۔
+اب تک ہم تصور کرتے رہے ہیں کہ تفرقی ایمپلیفائر میں استعمال کئے جانے والے یک سمتی  منبع رو کی اندرونی مزاحمت لامحدود ہوتی ہے۔حقیقت میں پائے جانے والے یک سمتی  منبع رو کی اندرونی مزاحمت نہایت زیادہ مگر محدود ہوتی ہے۔شکل \حوالہ{شکل_باریک_اشاراتی_مزاحمت_کو_زیر_نظر} الف میں یک سمتی  منبع رو کا مساوی \اصطلاح {نارٹن دور}\حاشیہب{Norton equivalent} استعمال کرتے ہوئے اس کے اندرونی باریک اشاراتی مزاحمت  \عددی{R} کو بھی شامل کیا گیا ہے۔اس شکل میں ٹرانزسٹر کا اندرونی مزاحمت  \عددی{r_e} کو تفرقی جوڑے کے اندر جانب فرضی طور دکھایا گیا ہے۔شکل \حوالہ{شکل_باریک_اشاراتی_مزاحمت_کو_زیر_نظر} ب میں اس ایمپلیفائر کے داخلی جانب کا باریک اشاراتی ماڈل دکھایا گیا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{differencePairInputResistanceA}
@@ -692,22 +692,22 @@ I_{OS}=\abs{\frac{2 I}{\beta+1} \left(\frac{\Delta \beta}{\beta+1} \right )}=2 I
 حاصل ہوتے ہیں۔
 
 \حصہ{مخلوط ادوار میں دو جوڑ ٹرانزسٹر کے مائل کرنے کے طریقے}
-ہم نے دو جوڑ ٹرانزسٹر کو چار عدد مزاحمت کے مدد سے مائل کر کے ان کے نقطہ کارکردگی تعین کرنا دیکھا۔مخلوط دور میں ٹرانزسٹر کے نسبت، مزاحمت بنانا زیادہ مہنگا ثابت ہوتا ہے۔اسی لئے مخلوط ادوار میں مزاحمت کے استعمال سے گریز کیا جاتا ہے اور ان میں ٹرانزسٹر کو \اصطلاح {منبع مستقل برقی رو}\فرہنگ{منبع مستقل برقی رو}\فرہنگ{constant current source}\حاشیہب{constant current source}  کی مدد سے مائل کیا جاتا ہے۔اس سے پہلے کہ ہم دیکھیں یہ کیسا کیا جاتا ہے یہ ضروری ہے کہ \اصطلاح {منبع مستقل برقی رو} پر غور کیا جائے۔
+ہم نے دو جوڑ ٹرانزسٹر کو چار عدد مزاحمت کے مدد سے مائل کر کے ان کے نقطہ کارکردگی تعین کرنا دیکھا۔مخلوط دور میں ٹرانزسٹر کے نسبت، مزاحمت بنانا زیادہ مہنگا ثابت ہوتا ہے۔اسی لئے مخلوط ادوار میں مزاحمت کے استعمال سے گریز کیا جاتا ہے اور ان میں ٹرانزسٹر کو \اصطلاح {یک سمتی  منبع رو}\فرہنگ{یک سمتی  منبع رو}\فرہنگ{constant current source}\حاشیہب{constant current source}  کی مدد سے مائل کیا جاتا ہے۔اس سے پہلے کہ ہم دیکھیں یہ کیسا کیا جاتا ہے یہ ضروری ہے کہ \اصطلاح {یک سمتی  منبع رو} پر غور کیا جائے۔
 
-\حصہ{پیداکار مستقل برقی رو}
-شکل  \حوالہ{شکل_پیداکار_مستقل_برقی_رو} الف میں \عددی{npn}  ٹرانزسٹر استعمال کرتے ہوئے \اصطلاح {پیداکار مستقل برقی رو} کا حصول دکھایا گیا ہے۔ اس دور میں، \عددی{\alpha} کو تقریباً ایک \عددی{(\approx 1)}  تصور کرتے ہوئے، جب تک ٹرانزسٹر افزائندہ  رہے، \عددی{I_{\textup{بوجھ} }}  کا دارومدار زینر ڈایوڈ کے \عددی{V_Z} اور مزاحمت \عددی{R_E} پر ہے یعنی
+\حصہ{یک سمتی  منبع برقی رو}
+شکل  \حوالہ{شکل_پیداکار_مستقل_برقی_رو} الف میں \عددی{npn}  ٹرانزسٹر استعمال کرتے ہوئے \اصطلاح {یک سمتی  منبع رو} کا حصول دکھایا گیا ہے۔ اس دور میں، \عددی{\alpha} کو تقریباً ایک \عددی{(\approx 1)}  تصور کرتے ہوئے، جب تک ٹرانزسٹر افزائندہ  رہے، \عددی{I_{\textup{بوجھ} }}  کا دارومدار زینر ڈایوڈ کے \عددی{V_Z} اور مزاحمت \عددی{R_E} پر ہے یعنی
 \begin{align*}
 I_E=\frac{V_Z-V_{BE}}{R_E}
 \end{align*}
-یوں \عددی{I_{\textup{بوجھ} }}  تبدیل کرنے سے اس میں برقی رو تبدیل نہیں ہوتی۔اس سے ہم دیکھ سکتے ہیں کہ \عددی{I_{\textup{بوجھ} }}   سے منسلک بقایا دور بطور \اصطلاح {پیداکار مستقل برقی رو} کام کرتا ہے۔شکل میں نقطہ دار دائرے میں بند حصے کو \اصطلاح {پیداکار مستقل برقی} رو کہتے ہیں۔
-شکل \حوالہ{شکل_پیداکار_مستقل_برقی_رو} ب میں \اصطلاح {پیداکار مستقل برقی رو} کی علامت (تیر والا دائرہ) استعمال کرتے ہوئے اسی دور کو دوبارہ پیش کیا گیا ہے۔علامت میں تیر کا نشان مستقل برقی رو کی سمت دکھلاتا ہے۔آپ دیکھ سکتے ہیں کہ اس طرز کے پیداکار مستقل برقی رو کو استعمال کرتے ہوئے بوجھ کو مثبت برقی دباو \عددی{V_{CC}} اور پیداکار مستقل برقی رو کے مابین نسب کیا جاتا ہے اور مستقل برقی رو  کی سمت بوجھ سے پیداکار مستقل برقی رو کی جانب ہوتی ہے۔یہاں آپ دیکھ سکتے ہیں کہ بوجھ سے برقی رو خارج ہو کر پیداکار مستقل برقی رو میں داخل ہوتا ہے۔ایسا پیداکار مستقل برقی رو بوجھ سے برقی رو زبردستی خارج  کراتا ہے۔اسی لئے اس دور کا زیادہ مقبول نام \اصطلاح {خارج کار مستقل برقی رو} یا صفر \اصطلاح {خارج کار برقی رو}\فرہنگ{خارج کار برقی رو}\حاشیہب{current sink}\فرہنگ{current sink} ہے۔ 
+یوں \عددی{I_{\textup{بوجھ} }}  تبدیل کرنے سے اس میں برقی رو تبدیل نہیں ہوتی۔اس سے ہم دیکھ سکتے ہیں کہ \عددی{I_{\textup{بوجھ} }}   سے منسلک بقایا دور بطور \اصطلاح {یک سمتی  منبع رو} کام کرتا ہے۔شکل میں نقطہ دار دائرے میں بند حصے کو \اصطلاح {یک سمتی  منبع رو} کہتے ہیں۔
+شکل \حوالہ{شکل_پیداکار_مستقل_برقی_رو} ب میں \اصطلاح {یک سمتی  منبع رو} کی علامت (تیر والا دائرہ) استعمال کرتے ہوئے اسی دور کو دوبارہ پیش کیا گیا ہے۔علامت میں تیر کا نشان مستقل برقی رو کی سمت دکھلاتا ہے۔آپ دیکھ سکتے ہیں کہ اس طرز کے یک سمتی  منبع رو کو استعمال کرتے ہوئے بوجھ کو مثبت برقی دباو \عددی{V_{CC}} اور یک سمتی  منبع رو کے مابین نسب کیا جاتا ہے اور یک سمتی  منبع رو  کی سمت بوجھ سے یک سمتی  منبع رو کی جانب ہوتی ہے۔یہاں آپ دیکھ سکتے ہیں کہ بوجھ سے برقی رو خارج ہو کر یک سمتی  منبع رو میں داخل ہوتی ہے۔ایسی یک سمتی  منبع رو بوجھ سے برقی رو زبردستی خارج  کراتی ہے۔اسی لئے اس دور کا زیادہ مقبول نام \اصطلاح {خارج کار منبع رو}\فرہنگ{خارج کار منبع رو}\حاشیہب{current sink}\فرہنگ{current sink} ہے۔ 
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{constantCurrentSourceA}
-\caption{خارج کار برقی رو}
+\caption{خارج کار منبع رو}
 \label{شکل_پیداکار_مستقل_برقی_رو}
 \end{figure}
-شکل-\حوالہ{شکل_پیداکار_مستقل_برقی_رو_ب} الف میں \عددی{pnp} ٹرانزسٹر پر مبنی پیداکار مستقل برقی رو دکھایا گیا ہے جبکہ شکل \حوالہ{شکل_پیداکار_مستقل_برقی_رو_ب} ب میں اسی دور کی علامتی شکل دکھائی گئی ہے۔اس طرز کے پیداکار مستقل برقی رو کو استعمال کرتے ہوئے بوجھ کو پیداکار مستقل برقی رو اور منفی برقی دباو \عددی{V_{EE}}  کے مابین نسب کیا جاتا ہے اور مستقل برقی رو  کی سمت پیداکار مستقل برقی رو سے بوجھ کی جانب ہوتی ہے۔ایسا پیداکار مستقل برقی رو بوجھ میں برقی رو زبردستی داخل  کرتا ہے۔اسی لئے اس دور کو \اصطلاح {داخل کار مستقل برقی رو} یا صرف \اصطلاح {داخل کار برقی رو}\فرہنگ{داخل کار برقی رو}\حاشیہب{current source}\فرہنگ{current source} بھی کہا جاتا ہے۔ 
+شکل-\حوالہ{شکل_پیداکار_مستقل_برقی_رو_ب} الف میں \عددی{pnp} ٹرانزسٹر پر مبنی یک سمتی  منبع رو دکھایا گیا ہے جبکہ شکل \حوالہ{شکل_پیداکار_مستقل_برقی_رو_ب} ب میں اسی دور کی علامتی شکل دکھائی گئی ہے۔اس طرز کے یک سمتی  منبع رو کو استعمال کرتے ہوئے بوجھ کو یک سمتی  منبع رو اور منفی برقی دباو \عددی{V_{EE}}  کے مابین نسب کیا جاتا ہے اور یک سمتی  منبع رو  کی سمت یک سمتی  منبع رو سے بوجھ کی جانب ہوتی ہے۔ایسی یک سمتی  منبع رو بوجھ میں برقی رو زبردستی داخل  کرتی ہے۔اسی لئے اس دور کو \اصطلاح {داخل کار منبع رو}\فرہنگ{داخل کار منبع رو}\حاشیہب{current source}\فرہنگ{current source} بھی کہا جاتا ہے۔ 
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{constantCurrentSourceB}
@@ -715,7 +715,7 @@ I_E=\frac{V_Z-V_{BE}}{R_E}
 \label{شکل_پیداکار_مستقل_برقی_رو_ب}
 \end{figure}
 
-مخلوط ادوار میں عموماً متعدد پیداکار مستقل برقی رو درکار ہوتے ہیں۔وقت کے ساتھ ایسے ادوار کے کارکردگی میں تبدیلی آتی ہے جسے \اصطلاح {عمر رسیدگی}\فرہنگ{عمر رسیدگی}\فرہنگ{ageing}\حاشیہب{ageing}  کا عمل کہتے ہیں۔اسی طرح درجہ حرارت اور دیگر وجوہات کی بنا پر بھی ادوار کے کارکردگی میں تبدیلی رونما ہوتی ہے۔مخلوط دور میں استعمال ہونے والے تمام پیداکار مستقل برقی رو میں پائے جانے والے اس طرح کے اثرات کو یکساں بنانے کی کوشش کی جاتی ہے۔یوں ان سے نپٹنا نسبتاً آسان ہوتا ہے۔آئیں دیکھیں کہ اس طرز کے پیداکار مستقل برقی رو کیسے بنائے جاتے ہیں۔
+مخلوط ادوار میں عموماً متعدد یک سمتی  منبع رو درکار ہوتے ہیں۔وقت کے ساتھ ایسے ادوار کے کارکردگی میں تبدیلی آتی ہے جسے \اصطلاح {عمر رسیدگی}\فرہنگ{عمر رسیدگی}\فرہنگ{ageing}\حاشیہب{ageing}  کا عمل کہتے ہیں۔اسی طرح درجہ حرارت اور دیگر وجوہات کی بنا پر بھی ادوار کے کارکردگی میں تبدیلی رونما ہوتی ہے۔مخلوط دور میں استعمال ہونے والے تمام یک سمتی  منبع رو میں پائے جانے والے اس طرح کے اثرات کو یکساں بنانے کی کوشش کی جاتی ہے۔یوں ان سے نپٹنا نسبتاً آسان ہوتا ہے۔آئیں دیکھیں کہ اس طرز کے یک سمتی  منبع رو کیسے بنائے جاتے ہیں۔
 
 \حصہ{آئینہ برقی رو}
 شکل \حوالہ{شکل_آئینہ_برقی_رو_الف} الف میں \اصطلاح {آئینہ برقی رو}\فرہنگ{آئینہ برقی رو}\فرہنگ{current mirror}\حاشیہب{current mirror}  دکھایا گیا ہے۔تصور کریں کہ دونوں ٹرانزسٹر کے \عددی{\beta} کی قیمت لامحدود ہے اور بائیں بازو میں برقی رو  \عددی{I_{\textup{حوالہ}}} گزر رہی ہے۔ \عددی{\beta} کی قیمت لامحدود ہو تو ٹرانزسٹر کے بیس  سرے پر برقی رو  \عددی{I_B}  قابل نظر انداز ہو گی۔یوں ٹرانزسٹر \عددی{Q_1}  میں برقی رو  \عددی{I_{\textup{حوالہ}}}  اور اس کے بیس-ایمٹر جوڑ پر برقی دباو \عددی{V_{BE}} پایا جائے گا جہاں
@@ -777,7 +777,7 @@ I_{\textup{عکس}} \approx \frac{I_{\textup{حوالہ}}} {1+\frac{2}{\beta^2}}
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{currentMirrorB}
-\caption{بہتر پیداکار مستقل برقی رو}
+\caption{بہتر یک سمتی  منبع رو}
 \label{شکل_بہتر_پیداکار_مستقل_برقی_رو}
 \end{figure}
 اگر شکل \حوالہ{شکل_بہتر_پیداکار_مستقل_برقی_رو} میں \عددی{I_{\textup{حوالہ}}} پیدا کرنے کی خاطر ایک عدد مزاحمت \عددی{R}  کو \عددی{V_{CC}} اور \عددی{Q_3} کے کلکٹر سرے کے درمیان جوڑ دیا جائے تب \عددی{I_{\textup{حوالہ}}}  یوں حاصل ہو گا۔
@@ -874,17 +874,17 @@ I_{\textup{حوالہ}}&=\frac{V_{CC}-0.7-V_{EE}}{R}=I_{\textup{عکس}}
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{currentMirrorDifferentTypes}
-\caption{پیداکار مستقل برقی رو کے مختلف ادوار}
+\caption{یک سمتی  منبع رو کے مختلف ادوار}
 \label{شکل_پیداکار_مستقل_برقی_رو_کے_مختلف_ادوار}
 \end{figure}
 شکل  ب میں اسی کا مساوی \عددی{pnp}  ٹرانزسٹروں پر مبنی  داخل کار مستقل برقی رو دکھایا گیا ہے۔یہ دور نقطہ دار لکیر کی جگہ نسب مطلوبہ دور میں مستقل برقی رو\عددی{I_{\textup{عکس}}} گزارتا ہے۔
 
-شکل  پ میں ان دونوں ادوار کو یوں جوڑا گیا ہے کہ ایک ہی مزاحمت دونوں پیداکار مستقل برقی رو کے  \عددی{I_{\textup{عکس}}}  کا تعین کرتا ہے۔اس دور کے لئے ہم لکھ سکتے ہیں۔
+شکل  پ میں ان دونوں ادوار کو یوں جوڑا گیا ہے کہ ایک ہی مزاحمت دونوں یک سمتی  منبع رو کے  \عددی{I_{\textup{عکس}}}  کا تعین کرتا ہے۔اس دور کے لئے ہم لکھ سکتے ہیں۔
 \begin{align*}
 V_{CC}&=V_{EB}+I_{\textup{حوالہ}} R +V_{BE} +V_{EE}\\
 I_{\textup{حوالہ}}&=\frac{V_{CC}-0.7-0.7-V_{EE}}{R}=I_{\textup{عکس}}
 \end{align*}
-\جزوحصہ{متعدد پیداکار مستقل برقی رو}
+\جزوحصہ{متعدد یک سمتی  منبع رو}
 
 شکل \حوالہ{شکل_آئینہ_برقی_رو_الف} میں تیسرے ٹرانزسٹر یعنی \عددی{Q_3} کے شمولیت سے شکل \حوالہ{شکل_دو_عکس_کا_حصول} الف حاصل ہوتا ہے۔چونکہ \عددی{Q_3} کے بیس-ایمٹر جوڑ پر بھی \عددی{Q_1} اور \عددی{Q_2} کے برابر \عددی{V_{BE}} پایا جاتا ہے لہٰذا اس میں بھی بالکل انہیں کے برابر \عددی{I_C} برقی رو پائی جائے گی۔
 \begin{figure}
@@ -904,7 +904,7 @@ I_{\textup{عکس}}=\frac{I_{\textup{حوالہ}}}{1+\frac{3}{\beta}}
 \end{align}
 اس دور کو عموماً شکل \حوالہ{شکل_دو_عکس_کا_حصول} ب یا شکل \حوالہ{شکل_دو_عکس_کا_حصول} پ کے طرز پر صاف اور شفاف طریقے سے بنایا جاتا ہے۔شکل  پ میں ایک ہی ٹرانزسٹر کے دو کلکٹر دکھائے گئے ہیں۔اس سے مراد دو ٹرانزسٹر لینا چاہئے جس کے بیس  آپس میں جڑے ہیں اور اسی طرح اس کے ایمٹر بھی آپس میں جڑے ہیں جبکہ دونوں کے کلکٹر آپس میں نہیں جوڑے گئے ہیں۔
 
-اسی بحث  کو آگے بڑھاتے ہوئے ایک ایسے پیداکار مستقل برقی رو جو \عددی{n} عکس بناتا ہو کے لئے مساوات \حوالہ{مساوات_تفرقی_تین_عکس}  کی صورت یوں ہو گی۔
+اسی بحث  کو آگے بڑھاتے ہوئے ایک ایسے یک سمتی  منبع رو جو \عددی{n} عکس بناتا ہو کے لئے مساوات \حوالہ{مساوات_تفرقی_تین_عکس}  کی صورت یوں ہو گی۔
 \begin{align}
 I_{\textup{عکس}}=\frac{I_{\textup{حوالہ}}}{1+\frac{n+1}{\beta}}
 \end{align}
@@ -912,13 +912,13 @@ I_{\textup{عکس}}=\frac{I_{\textup{حوالہ}}}{1+\frac{n+1}{\beta}}
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{currentMirrorMultiple}
-\caption{متعدد پیداکار مستقل برقی رو}
+\caption{متعدد یک سمتی  منبع رو}
 \label{شکل_متعدد_پیداکار_برقی_رو}
 \end{figure}
 \حصہ{ٹرانزسٹر بوجھ سے لدا دو جوڑ ٹرانزسٹر کا تفرقی ایمپلیفائر}
 جیسا کہ پہلے بھی ذکر کیا گیا، مخلوط ادوار بناتے وقت کوشش کی جاتی ہے کہ مزاحمتوں کا استعمال کم سے کم کیا جائے۔جیسا کہ شکل \حوالہ{شکل_ٹرانزسٹر_بار_سے_لدھا_تفرقی_جوڑا} الف میں دکھایا گیا ہے، مخلوط ادوار میں استعمال ہونے والے تفرقی ایمپلیفائر کے خارجی جانب مزاحمت \عددی{R_C} کی جگہ \اصطلاح {آئینہ برقی} رو استعمال کیا جاتا ہے۔
 
-پیداکار مستقل برقی رو کل \عددی{2 \times I} برقی رو جڑوا ٹرانزسٹروں سے گزارتا ہے۔یوں داخلی تفرقی برقی اشارہ کے عدم موجودگی میں ایمپلیفائر کے ٹرانزسٹر \عددی{Q_{a1}}  اور \عددی{Q_{a2}} میں یک سمتی برقی رو \عددی{I} گزر کر انہیں مائل کرتی ہے۔ \عددی{Q_{b1}} اور \عددی{Q_{b2}} جو کہ آئینہ برقی رو ہیں، بطورِ برقی بوجھ استعمال کئے گئے ہیں۔ \عددی{Q_{b1}} کی برقی رو کو دیکھ کر \عددی{Q_{b2}} اس کا عکس برقی رو پیدا کرتا ہے۔چونکہ \عددی{Q_{b1}} سے وہی برقی رو گزرتی ہے جو \عددی{Q_{a1}} سے گزرتی ہے لہٰذا \عددی{I} بطور حوالہ استعمال ہو گا اور  \عددی{Q_{b2}} اس کے برابر (یعنی  \عددی{I} ) عکس پیدا کرے گا۔چونکہ  \عددی{Q_{a2}} میں بھی \عددی{I} برقی رو گزر رہی ہے لہٰذا \عددی{Q_{b2}} کی پیدا کردہ تمام کی تمام برقی رو \عددی{Q_{a2}} سے ہی گزرے گی اور یوں بیرونی برقی مزاحمت \عددی{R_L} میں صفر برقی رو گزرے گی۔یوں \عددی{v_o} صفر وولٹ ہو گا۔
+یک سمتی  منبع رو کل \عددی{2 \times I} برقی رو جڑوا ٹرانزسٹروں سے گزارتا ہے۔یوں داخلی تفرقی برقی اشارہ کے عدم موجودگی میں ایمپلیفائر کے ٹرانزسٹر \عددی{Q_{a1}}  اور \عددی{Q_{a2}} میں یک سمتی برقی رو \عددی{I} گزر کر انہیں مائل کرتی ہے۔ \عددی{Q_{b1}} اور \عددی{Q_{b2}} جو کہ آئینہ برقی رو ہیں، بطورِ برقی بوجھ استعمال کئے گئے ہیں۔ \عددی{Q_{b1}} کی برقی رو کو دیکھ کر \عددی{Q_{b2}} اس کا عکس برقی رو پیدا کرتا ہے۔چونکہ \عددی{Q_{b1}} سے وہی برقی رو گزرتی ہے جو \عددی{Q_{a1}} سے گزرتی ہے لہٰذا \عددی{I} بطور حوالہ استعمال ہو گا اور  \عددی{Q_{b2}} اس کے برابر (یعنی  \عددی{I} ) عکس پیدا کرے گا۔چونکہ  \عددی{Q_{a2}} میں بھی \عددی{I} برقی رو گزر رہی ہے لہٰذا \عددی{Q_{b2}} کی پیدا کردہ تمام کی تمام برقی رو \عددی{Q_{a2}} سے ہی گزرے گی اور یوں بیرونی برقی مزاحمت \عددی{R_L} میں صفر برقی رو گزرے گی۔یوں \عددی{v_o} صفر وولٹ ہو گا۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{activeLoadedDifferencePair}
@@ -1254,12 +1254,12 @@ A_d=A_{d1} A_{d2}&=-\frac{1}{2}  \times \left(\frac{r_{be5}+r_{be6}}{4 r_{e2}}\r
 
 صفحہ \حوالہصفحہ{مساوات_ٹرانزسٹر_داخلی_مزاحمت_بالمقابل_افزائش} پر مساوات \حوالہ{مساوات_ٹرانزسٹر_داخلی_مزاحمت_بالمقابل_افزائش} پر تبصرہ کرتے وقت یہ حقیقت بتلائی گئی تھی کہ اگر افزائش بڑھائی جائے دو داخلی مزاحمت گھٹتی ہے۔تفرقی ایمپلیفائر میں بھی داخلی مزاحمت گھٹاتے ہوئے افزائش بڑھانا ممکن ہے۔
 %==================
-\حصہ{وائڈلر پیداکار برقی رو}
-شکل \حوالہ{شکل_آئینہ_برقی_رو_الف} میں \عددیء{Q_2} کے ایمٹر پر \عددیء{R_E} نسب کرنے سے  \اصطلاح {وائڈلر پیداکار برقی رو}\فرہنگ{وائڈلر پیداکار برقی رو}\فرہنگ{منبع برقی رو!وائڈلر}\حاشیہب{Widlar current source}\فرہنگ{Widlar current source} حاصل ہوتا ہے جسے شکل \حوالہ{شکل_تفرقی_وائڈلر_پیداکار_برقی_رو} میں\حاشیہد{باب وائڈلر نے اس دور کو دریافت کیا۔} میں دکھایا گیا ہے۔ٹرانزسٹر کے برقی رو کے مساوات کو استعمال کرتے ہوئے 
+\حصہ{وائڈلر منبع برقی رو}
+شکل \حوالہ{شکل_آئینہ_برقی_رو_الف} میں \عددیء{Q_2} کے ایمٹر پر \عددیء{R_E} نسب کرنے سے  \اصطلاح {وائڈلر منبع برقی رو}\فرہنگ{وائڈلر منبع رو}\فرہنگ{منبع برقی رو!وائڈلر}\حاشیہب{Widlar current source}\فرہنگ{Widlar current source} حاصل ہوتا ہے جسے شکل \حوالہ{شکل_تفرقی_وائڈلر_پیداکار_برقی_رو} میں\حاشیہد{باب وائڈلر نے اس دور کو دریافت کیا۔} میں دکھایا گیا ہے۔ٹرانزسٹر کے برقی رو کے مساوات کو استعمال کرتے ہوئے 
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{widlarCurrentSource}
-\caption{وائڈلر پیداکار برقی رو}
+\caption{وائڈلر منبع برقی رو}
 \label{شکل_تفرقی_وائڈلر_پیداکار_برقی_رو}
 \end{figure}
 %
@@ -1283,12 +1283,12 @@ I_{\textrm{عکس}} R_E=V_T \ln \left(\frac{I_{\textrm{حوالہ}}}{I_{\textrm{
 
 آئیں وائڈلر منبع برقی رو کی خارجی مزاحمت \عددیء{R_o} حاصل کریں۔ایسا کرنے کی خاطر \عددی{Q_2} کے کلکٹر پر \عددیء{v_t} برقی دباو مہیا کرتے ہوئے \عددیء{i_t} کا حساب لگا کر \عددیء{\tfrac{v_t}{i_t}} معلوم کیا جا سکتا ہے جو کہ \عددیء{R_o} کی قیمت ہو گی۔
 
-وائڈلر منبع برقی رو میں \عددیء{Q_1} کے کلکٹر اور بیس آپس میں جڑے ہیں۔یوں یہ بطور ڈایوڈ کردار ادا کرتا ہے۔صفحہ \حوالہصفحہ{مساوات_ٹرانزسٹر_ڈایوڈ_جڑے_ٹرانزسٹر_کی_مزاحمت} پر مساوات \حوالہ{مساوات_ٹرانزسٹر_ڈایوڈ_جڑے_ٹرانزسٹر_کی_مزاحمت} ایسے ٹرانزسٹر کی مزاحمت \عددیء{r_e} دیتا ہے۔وائڈلر پیداکار برقی رو کی خارجی مزاحمت حاصل کرنے کی خاطر \عددیء{Q_2} کا پائے ماڈل استعمال کرتے ہیں جبکہ \عددیء{Q_1} کی جگہ اس کا باریک اشاراتی مساوی مزاحمت \عددیء{r_e} نسب کرتے ہیں۔ایسا کرتے ہوئے شکل \حوالہ{شکل_تفرقی_وائڈلر_پیداکار_برقی_رو_مساوی} الف حاصل ہوتا ہے۔آپ جانتے ہیں کہ \عددیء{r_{be}=r_e\left(\beta+1 \right)} ہوتا ہے۔یوں \عددیء{r_{be}\gg r_e} ہے لہٰذا سلسلہ وار جڑے \عددیء{r_{be}} اور \عددیء{r_e} میں \عددیء{r_e} کو نظرانداز کیا جا سکتا ہے۔ایسا کرنے سے شکل  ب حاصل ہوتا ہے جہاں سے صاف ظاہر ہے کہ \عددیء{R_E} اور \عددیء{r_{be}} متوازی جڑے ہیں۔\عددیء{R_E \mathbin{\|} r_{be}} کو \عددیء{R_E'} لکھتے ہوئے اس میں برقی رو کو \عددیء{\tfrac{v_{be}}{R_E'}} لکھا جا سکتا ہے۔
+وائڈلر منبع برقی رو میں \عددیء{Q_1} کے کلکٹر اور بیس آپس میں جڑے ہیں۔یوں یہ بطور ڈایوڈ کردار ادا کرتا ہے۔صفحہ \حوالہصفحہ{مساوات_ٹرانزسٹر_ڈایوڈ_جڑے_ٹرانزسٹر_کی_مزاحمت} پر مساوات \حوالہ{مساوات_ٹرانزسٹر_ڈایوڈ_جڑے_ٹرانزسٹر_کی_مزاحمت} ایسے ٹرانزسٹر کی مزاحمت \عددیء{r_e} دیتا ہے۔وائڈلر منبع رو کی خارجی مزاحمت حاصل کرنے کی خاطر \عددیء{Q_2} کا پائے ماڈل استعمال کرتے ہیں جبکہ \عددیء{Q_1} کی جگہ اس کا باریک اشاراتی مساوی مزاحمت \عددیء{r_e} نسب کرتے ہیں۔ایسا کرتے ہوئے شکل \حوالہ{شکل_تفرقی_وائڈلر_پیداکار_برقی_رو_مساوی} الف حاصل ہوتا ہے۔آپ جانتے ہیں کہ \عددیء{r_{be}=r_e\left(\beta+1 \right)} ہوتا ہے۔یوں \عددیء{r_{be}\gg r_e} ہے لہٰذا سلسلہ وار جڑے \عددیء{r_{be}} اور \عددیء{r_e} میں \عددیء{r_e} کو نظرانداز کیا جا سکتا ہے۔ایسا کرنے سے شکل  ب حاصل ہوتا ہے جہاں سے صاف ظاہر ہے کہ \عددیء{R_E} اور \عددیء{r_{be}} متوازی جڑے ہیں۔\عددیء{R_E \mathbin{\|} r_{be}} کو \عددیء{R_E'} لکھتے ہوئے اس میں برقی رو کو \عددیء{\tfrac{v_{be}}{R_E'}} لکھا جا سکتا ہے۔
 %
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{widlarCurrentSourceSmallSignalEquivalent}
-\caption{وائڈلر پیداکار برقی رو کا باریک اشاراتی مساوی دور}
+\caption{وائڈلر منبع رو کا باریک اشاراتی مساوی دور}
 \label{شکل_تفرقی_وائڈلر_پیداکار_برقی_رو_مساوی}
 \end{figure}
 اس برقی رو کی سمت شکل میں دکھائی گئی ہے۔کرچاف کے قانون برائے برقی رو کی مدد سے
@@ -1307,7 +1307,7 @@ v_t=-v_{be}-\left(g_m +\frac{1}{R_E'} \right) v_{be} r_o
 \begin{align}\label{مساوات_تفرقی_وائڈلر_ٹیسٹ_برقی_رو}
 i_t=g_m v_{be}-\left(g_m +\frac{1}{R_E'} \right) v_{be}
 \end{align}
-لکھا جا سکتا ہے۔مساوات \حوالہ{مساوات_تفرقی_وائڈلر_ٹیسٹ_برقی_دباو} کو مساوات \حوالہ{مساوات_تفرقی_وائڈلر_ٹیسٹ_برقی_رو} سے تقسیم کرتے ہوئے وائڈلر پیداکار برقی دباو کی خارجی مزاحمت \عددیء{R_o} یوں حاصل ہوتی ہے۔
+لکھا جا سکتا ہے۔مساوات \حوالہ{مساوات_تفرقی_وائڈلر_ٹیسٹ_برقی_دباو} کو مساوات \حوالہ{مساوات_تفرقی_وائڈلر_ٹیسٹ_برقی_رو} سے تقسیم کرتے ہوئے وائڈلر منبع کی خارجی مزاحمت \عددیء{R_o} یوں حاصل ہوتی ہے۔
 \begin{align*}
 R_o=\frac{v_t}{i_t}&=R_E' \left[1+r_o \left(g_m+\frac{1}{R_E'} \right) \right]\\
 &=R_E'+r_o\left(1+g_m R_E' \right)
@@ -1344,7 +1344,7 @@ R_{\textrm{حوالہ}}=\frac{9-0.7}{1 \times 10^{-3}}=\SI{8.3}{\kilo \ohm}
 \begin{align*}
 R_E=\frac{25 \times 10^{-3}}{15 \times 10^{-6}} \ln \left(\frac{10^{-3}}{15 \times 10^{-6}} \right)=\SI{7}{\kilo \ohm}
 \end{align*}
-حاصل ہوتے ہیں۔آپ نے دیکھا کہ  کم برقی رو پیدا کرنے کی خاطر سادہ پیداکار کو \عددیء{\SI{553}{\kilo \ohm}} جبکہ وائڈلر پیداکار کو \عددیء{\SI{8.3}{\kilo \ohm}} اور \عددیء{\SI{7}{\kilo \ohm}} کے مزاحمت درکار ہیں۔جیسا کہ آپ جانتے ہیں کہ مخلوط دور میں زیادہ قیمت کا مزاحمت زیادہ جگہ گھیرتا ہے جو کہ مہنگا پڑتا ہے۔اسی لئے مخلوط ادوار میں وائڈلر پیداکار استعمال کیا جائے گا۔
+حاصل ہوتے ہیں۔آپ نے دیکھا کہ  کم برقی رو پیدا کرنے کی خاطر سادہ منبع رو کو \عددیء{\SI{553}{\kilo \ohm}} جبکہ وائڈلر منبع رو کو \عددیء{\SI{8.3}{\kilo \ohm}} اور \عددیء{\SI{7}{\kilo \ohm}} کے مزاحمت درکار ہیں۔جیسا کہ آپ جانتے ہیں کہ مخلوط دور میں زیادہ قیمت کا مزاحمت زیادہ جگہ گھیرتا ہے جو کہ مہنگا پڑتا ہے۔اسی لئے مخلوط ادوار میں وائڈلر منبع رو استعمال کیا جائے گا۔
 \انتہا{مثال}
 %==================
 \حصہ{ولسن آئینہ}
@@ -2000,8 +2000,8 @@ R_o & & \approx g_m r_o^2
 \end{gather}
 حاصل ہوتا ہے۔
 %==============================
-\جزوحصہ{برقی منبع کے اثرات سے آزاد پیداکار برقی رو}
-مختلف آئینہ برقی رو پر تبصرے کے دوران یہ تصور کیا گیا کہ \عددیء{I_{\textrm{حوالہ}}} ایک مستقل مقدار ہے جس پر \عددیء{V_{CC}}، \عددیء{V_{EE}} وغیرہ کا کوئی اثر نہیں۔آئیں ایک ایسے پیداکار برقی رو پر غور کریں جس کی پیدا کردہ برقی رو پر  \عددیء{V_{+}}، \عددیء{V_{-}} وغیرہ کا کوئی اثر نہیں ہوتا۔ایسے  پیداکار برقی رو کو شکل \حوالہ{شکل_تفرقی_ماسفیٹ_منبع_سے_آزاد_پیداکار_برقی_رو} میں دکھایا گیا ہے۔
+\جزوحصہ{منبع دباو کے اثرات سے آزاد منبع رو}
+مختلف آئینہ برقی رو پر تبصرے کے دوران یہ تصور کیا گیا کہ \عددیء{I_{\textrm{حوالہ}}} ایک مستقل مقدار ہے جس پر منبع دباو  \عددیء{V_{CC}}اور \عددیء{V_{EE}} کا کوئی اثر نہیں۔آئیں ایک ایسے \اصطلاح{منبع رو}\فرہنگ{منبع رو}\فرہنگ{current source}\حاشیہب{current source} پر غور کریں جس کی پیدا کردہ برقی رو پر  \عددیء{V_{+}}، \عددیء{V_{-}} وغیرہ کا کوئی اثر نہیں ہوتا۔ایسے  منبع رو کو شکل \حوالہ{شکل_تفرقی_ماسفیٹ_منبع_سے_آزاد_پیداکار_برقی_رو} میں دکھایا گیا ہے۔
 
 تمام ماسفیٹ کو افزائندہ تصور کریں۔\عددیء{Q_3} اور \عددیء{Q_4} مل کر منبع برقی رو بناتے ہیں جسے اب تک ہم دیکھتے آ رہے ہیں۔\عددیء{Q_3} اور \عددیء{Q_4} بالکل یکساں ہیں۔یوں \عددیء{I_{D1}=I_{D2}} ہو گا۔آئیں اب \عددیء{Q_1} اور \عددیء{Q_2} پر غور کریں۔\عددیء{Q_1} کا برقی رو \عددیء{I_{D1}} ہی ہے۔اسی طرح \عددیء{Q_2} کا برقی رو \عددیء{I_{D2}} ہی ہے۔یوں
 \begin{align*}
@@ -2048,7 +2048,7 @@ R=\frac{\sqrt{2}}{\sqrt{k_{n2} I_{D2}}} \left[ \sqrt{\frac{\left(\frac{W}{L} \ri
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{supplyIndependentCurrentSource}
-\caption{منبع کے اثرات سے آزاد پیداکار برقی رو}
+\caption{منبع دباو کے اثرات سے پاک منبع رو}
 \label{شکل_تفرقی_ماسفیٹ_منبع_سے_آزاد_پیداکار_برقی_رو}
 \end{figure}
 %==============================
