--- a/tex/electronicsDiode.tex
+++ b/tex/electronicsDiode.tex
@@ -332,7 +332,7 @@ v_o = v_i  - v_D \approx V_p \sin \omega t  - 0.7
 
 اس دور کی مدد سے بدلتی داخلی برقی دباو جو مثبت اور منفی حصوں پر مشتمل ہے سے ایک ایسی خارجی برقی دباو حاصل کی گئی ہے جس میں داخلی برقی دباو کے صرف مثبت حصے موجود ہیں۔ بدلتی برقی دباو سے نصف لہر کی یک سمتی برقی دباو کے حصول کو \اصطلاح {نصف لہر سمت کاری}\حاشیہب{half wave rectification}  کہتے ہیں۔یوں شکل \حوالہ{شکل_نصف_لہر_مثبت_سمت_کار} میں دئے دور کو \قریب{\اصطلاح {نصف لہر مثبت سمت کار}}\فرہنگ{نصف لہر!مثبت سمت کار}\فرہنگ{سمت کار!نصف لہر}\فرہنگ{half wave rectifier!positive}\حاشیہب{half wave positive rectifier}  کہتے ہیں۔
 
-نصف سمت کار جسے عام فہم میں \اصطلاح {آدھا ریکٹیفائر}\حاشیہب{half wave rectifier} کہتے ہیں ایک انتہائی اہم دور ہے جسے استعمال کرتے ہوئے کئی ادوار مثلاً \اصطلاح {منبع برقی دباو} یعنی برقی دباو کی \اصطلاح {منبع}\فرہنگ{برقی دباو منبع}\فرہنگ{power supply} ، بیٹری چارجر\حاشیہد{موبائل فون رکھنے والے بیٹری چارجر سے بخوبی آگاہ ہوں گے چونکہ بیٹری بھرنے کے لئے ان کی ضرورت پڑتی ہے۔} وغیرہ بنائے جاتے ہیں۔
+نصف سمت کار جسے عام فہم میں \اصطلاح {آدھا ریکٹیفائر}\حاشیہب{half wave rectifier} کہتے ہیں ایک انتہائی اہم دور ہے جسے استعمال کرتے ہوئے کئی ادوار مثلاً  \اصطلاح {منبع برقی دباو}\فرہنگ{برقی دباو منبع}\حاشیہب{voltage source}\فرہنگ{power supply} ، بیٹری چارجر\حاشیہد{موبائل فون رکھنے والے بیٹری چارجر سے بخوبی آگاہ ہوں گے چونکہ بیٹری بھرنے کے لئے ان کی ضرورت پڑتی ہے۔} وغیرہ بنائے جاتے ہیں۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{halfWaveRectifierNegative}
@@ -452,7 +452,9 @@ v_O=V_{p} e^{-\frac{t}{RC}}
 
 اس مساوات میں چوٹی کو \عددی{t=0} تصور کیا گیا ہے۔کپیسٹر سے بار اس لمحہ تک خارج ہوتا ہے جب تک کپیسٹر پر برقی دباو \عددی{v_O}  دور کے داخلی برقی دباو \عددی{v_I}  سے زیادہ رہے۔جیسے ہی \عددی{v_I}کی مقدار ایک مرتبہ پھر \عددی{v_O}کی مقدار سے تجاوز کر جائے، اسی لمحہ ڈایوڈ دوبارہ سیدھا مائل ہو کر کپیسٹر کو دوبارہ بھرنا شروع کر دیتا ہے۔شکل میں باریک لکیر سے داخلی برقی دباو جبکہ موٹی لکیر سے خارجی برقی دباو دکھایا گیا ہے۔\اصطلاح {حیطہ اتار کار} میں \عددی{RC} کو یوں رکھا جاتا ہے کہ  کپیسٹر پر \عددی{v_I} کے چوٹیوں کے برابر برقی دباو رہے جو دراصل \عددی{v_s} ہی ہے۔یوں اصل اشارہ دوبارہ حاصل ہوتا ہے۔
 
-کسی بھی اشارہ یعنی اطلاع  \عددی{v_s} کو ایک جگہ سے دوسری جگہ منتقل کرنے کی خاطر اسے بلند تعدد کے سائن-نما اشارہ \عددی{v_c} کے حیطے پر \اصطلاح {حیطہ سوار کار}\فرہنگ{حیطہ!سوار کار}\فرہنگ{AM modulator}\حاشیہب{AM modulator} کی مدد سے سوار کیا جاتا ہے۔منتقلی کے مقام پر پہنچنے کے بعد \اصطلاح {حیطہ سوار اشارے} سے \اصطلاح {حیطہ اتار کار} کی مدد سے اصل اشارہ یعنی اطلاع کو \عددی{v_s} دوبارہ حاصل کیا جاتا ہے۔\عددی{v_c} کے حیطے پر سوار کرنے سے مراد \عددی{v_c} کے حیطے کو \عددی{v_s} کے مطابق تبدیل کرنے کو کہتے ہیں۔\عددی{v_s=0.5 \cos \omega_s t} کو مثال بناتے ہوئے آگے بڑھتے ہیں۔حیطہ سوار اشارہ حاصل کرنے کی خاطر \عددی{v_s} اور \عددی{v_c} کو \اصطلاح {حیطہ سوار کار} سے گزارا جاتا ہے جس سے 
+کسی بھی اشارہ یعنی اطلاع  \عددی{v_s} کو ایک جگہ سے دوسری جگہ منتقل کرنے کی خاطر اسے بلند تعدد کے سائن-نما اشارہ \عددی{v_c} کے حیطے پر \اصطلاح {حیطہ سوار کار}\فرہنگ{حیطہ!سوار کار}\فرہنگ{AM modulator}\حاشیہب{AM modulator} کی مدد سے سوار کیا جاتا ہے۔منتقلی کے مقام پر پہنچنے کے بعد \اصطلاح {حیطہ سوار اشارے} سے \اصطلاح {حیطہ اتار کار} کی مدد سے اصل اشارہ یعنی اطلاع \عددی{v_s} کو  دوبارہ حاصل کیا جاتا ہے۔\عددی{v_c} کے حیطے پر سوار کرنے سے مراد \عددی{v_c} کے حیطے کو \عددی{v_s} کے مطابق تبدیل کرنے کو کہتے ہیں۔اشارہ \عددی{v_s}  کو \اصطلاح{سوار موج}\فرہنگ{سوار!موج}\فرہنگ{موج!سوار}\حاشیہب{carrier wave}\فرہنگ{carrier wave} کہتے ہیں جبکہ اس کی تعدد کو \اصطلاح{تعددِ سوار}\فرہنگ{تعدد!سوار}\فرہنگ{سوار!تعدد}\حاشیہب{modulating frequency}\فرہنگ{modulating frequency} کہتے ہیں۔اسی طرح \عددی{v_c} کو \اصطلاح{سواری موج}\فرہنگ{سواری!موج}\فرہنگ{موج!سواری}\حاشیہب{modulating wave}\فرہنگ{modulating wave} کہتے ہیں جبکہ اس کی تعدد کو \اصطلاح{تعددِ سواری}\فرہنگ{تعدد!سواری}\فرہنگ{سواری!تعدد}\حاشیہب{carrier frequency}\فرہنگ{carrier frequency} کہتے ہیں۔
+
+\عددی{v_s=0.5 \cos \omega_s t} کو مثال بناتے ہوئے آگے بڑھتے ہیں۔حیطہ سوار اشارہ حاصل کرنے کی خاطر \عددی{v_s} اور \عددی{v_c} کو \اصطلاح {حیطہ سوار کار} سے گزارا جاتا ہے جس سے 
 \begin{align}\label{مساوات_ڈایوڈ_حیطہ_سوار_اشارہ}
 v_I=\left(1+0.5 \cos \omega_s t \right) \cos \omega_c t=V_p \cos \omega t
 \end{align}
@@ -489,7 +491,7 @@ v_O=V_{p} e^{-\frac{1}{RC f_c}} \approx V_p \left(1-\frac{1}{RC f_c} +\cdots \ri
  
 بے بوجھ منبع برقی دباو کی کارکردگی بالکل چوٹی حاصل کار کی طرح ہے جبکہ برقی بوجھ سے لدے منبع برقی دباو کی کارکردگی حیطہ اتار کار کی طرح ہے۔البتہ منبع میں ہماری کوشش ہوتی ہے کہ  \عددی{V_{\textrm{یکسمتی}}} میں \اصطلاح {بل} کم سے کم ہو تا کہ اسے یک سمتی برقی دباو کے طور استعمال کرنا ممکن ہو۔منبع برقی دباو تقریباً ہر برقیاتی آلہ یا مشین میں پایا جاتا ہے۔
 
-چونکہ پیداکار برقی دباو داخلی طاقت \عددی{\SI{50}{\hertz}} کے سائن نما \عددی{v_i} سے حاصل کرتا ہے لہٰذا \عددی{C} بھی اسی تعدد سے بھرتا ہے۔\عددی{v_i} کے دو چوٹیوں کے مابین \عددی{\tfrac{1}{50}=\SI{20}{\milli \second}}  (بیس ملی سیکنڈ )  کے وقفے  کے دوران \عددی{R_L} کو کپیسٹر \عددی{C} طاقت مہیا کرتا ہے۔
+چونکہ منبع برقی دباو داخلی طاقت \عددی{\SI{50}{\hertz}} کے سائن نما \عددی{v_i} سے حاصل کرتا ہے لہٰذا \عددی{C} بھی اسی تعدد سے بھرتا ہے۔\عددی{v_i} کے دو چوٹیوں کے مابین \عددی{\tfrac{1}{50}=\SI{20}{\milli \second}}  (بیس ملی سیکنڈ )  کے وقفے  کے دوران \عددی{R_L} کو کپیسٹر \عددی{C} طاقت مہیا کرتا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{powerSupply}
@@ -541,12 +543,12 @@ C&=\SI{40}{\micro \farad}
 \انتہا{مثال}
 %===============
 
-کپیسٹر کی قیمت بڑھانے سے منبع کے خارجی برقی دباو میں \اصطلاح {بل} کم کیا جا سکتا ہے۔حقیقت میں ڈایوڈ میں برقی دباو کا گھٹاو اور داخلی بدلتے برقی دباو میں تبدیلی ہمارے قابو میں نہیں ہوتے لہٰذا اس طرح کے پیداکار برقی دباو سے قطعی یک سمتی برقی دباو کا حصول ممکن نہیں ہوتا۔جہاں درکار یک سمتی برقی دباو کی  قیمت چند وولٹ زیادہ یا کم  قابل برداشت ہو وہاں اس طرح کی منبع استعمال کی جا سکتی ہے۔یک سمتی برقی دباو کی قیمت زیادہ یا کم ہونے کے باوجود برقی دباو میں \اصطلاح {بل} کو کپیسٹر سے قابو رکھنا ممکن ہے۔
+کپیسٹر کی قیمت بڑھانے سے منبع کے خارجی برقی دباو میں \اصطلاح {بل} کم کیا جا سکتا ہے۔حقیقت میں ڈایوڈ میں برقی دباو کا گھٹاو اور داخلی بدلتے برقی دباو میں تبدیلی ہمارے قابو میں نہیں ہوتے لہٰذا اس طرح کی منبع برقی دباو سے قطعی یک سمتی برقی دباو کا حصول ممکن نہیں ہوتا۔جہاں درکار یک سمتی برقی دباو کی  قیمت چند وولٹ زیادہ یا کم  قابل برداشت ہو وہاں اس طرح کی منبع استعمال کی جا سکتی ہے۔یک سمتی برقی دباو کی قیمت زیادہ یا کم ہونے کے باوجود برقی دباو میں \اصطلاح {بل}\فرہنگ{بل}\حاشیہب{ripple}\فرہنگ{ripple} کو کپیسٹر سے قابو رکھنا ممکن ہے۔
 
 
 %================
 \ابتدا{مشق}
-\عددی{\SI{10}{\milli \ampere}} کے برقی بوجھ کو چلانے کی خاطر \عددی{\SI{5}{\volt}} کا پیداکار برقی دباو درکار ہے جس میں \اصطلاح {بل} \عددی{\SI{\mp 0.1}{\volt}} سے کم ہونا ضروری ہے۔کپیسٹر کی قیمت حاصل کریں۔اس قسم کا \اصطلاح {پیداکار برقی دباو} برقیاتی ادوار کو چلانے کی خاطر عموماً درکار ہوتا ہے۔
+\عددی{\SI{10}{\milli \ampere}} کے برقی بوجھ کو چلانے کی خاطر \عددی{\SI{5}{\volt}} کی منبع برقی دباو درکار ہے جس میں \اصطلاح {بل} \عددی{\SI{\mp 0.1}{\volt}} سے کم ہونا ضروری ہے۔کپیسٹر کی قیمت حاصل کریں۔اس قسم کی \اصطلاح {منبع برقی دباو}\فرہنگ{منبع دباو}\حاشیہب{voltage source}\فرہنگ{voltage source} برقیاتی ادوار کو چلانے کی خاطر عموماً درکار ہوتی ہے۔
 
 جواب: \عددی{\SI{1000}{\micro \farad}}
 \انتہا{مشق}
