--- a/tex/electronicsMOSFET.tex
+++ b/tex/electronicsMOSFET.tex
@@ -24,7 +24,7 @@
 
 جیسا کہ آپ دیکھیں گے گیٹ اور سورس سروں کے مابین \اصطلاح {برقی دباو کی شدت}\حاشیہد{MOSFET کے نام کے پہلے تین مخفف یعنی MOS اس کی ساخت یعنی Semiconductor Oxide Metal سے حاصل کئے گئے ہیں جبکہ بقایا مخفف یعنی FET برقی دباو کی شدت سے چلنے کے عمل یعنی Transistor Effect Field سے لئے گئے ہیں۔}  کے ذریعہ سلیکان کی پتری میں، گیٹ کے نیچے، سورس اور ڈرین خطوں کے مابین برقی رو کے لئے \اصطلاح {راہ}\فرہنگ{راہ}\فرہنگ{channel}\حاشیہب{channel}  پیدا کی جاتی ہے۔اس راہ کے مقام کو شکل  ت میں دکھایا گیا ہے۔سورس اور ڈرین سروں کے مابین برقی دباو لاگو کرنے سے اس راہ میں برقی رو کا گزر ہوتا ہے۔جیسا کہ شکل سے واضح ہے اس راہ کی لمبائی \عددی{L} اور چوڑائی \عددی{W} ہو گی۔راہ کی لمبائی عموماً \عددی{\SI{1}{\micro \meter}}   تا \عددی{\SI{10}{\micro \meter}} جبکہ اس کی چوڑائی \عددی{\SI{2}{\micro \meter}} تا \عددی{\SI{500}{\micro \meter}} ہوتی ہے۔
 
-دو جوڑ ٹرانزسٹر میں بیس پر لاگو برقی رو کی مدد سے ٹرانزسٹر میں برقی رو کے بہاو کو قابو کیا جاتا ہے جہاں بیس میں \عددی{\frac{I_C}{\beta}} برقی رو درکار ہوتی ہے۔اس کے برعکس ماسفیٹ کے گیٹ  اور بقایا حصوں کے درمیان غیر موصل \عددی{\mathrm{SiO_2}} پایا جاتا ہے جس میں برقی رو کا گزر تقریباً ناممکن ہوتا ہے۔حقیقت میں گیٹ میں یک سمتی برقی رو کی مقدار \عددی{10^{-15}} ایمپیئر کے لگ بھگ  ہوتی ہے جو ایک قابلِ نظر انداز مقدار ہے۔
+دو جوڑ ٹرانزسٹر میں بیس پر لاگو برقی رو کی مدد سے ٹرانزسٹر میں برقی رو \عددی{I_C} کو قابو کیا جاتا ہے جہاں بیس میں \عددی{\frac{I_C}{\beta}} برقی رو درکار ہوتی ہے۔اس کے برعکس ماسفیٹ کے گیٹ  اور بقایا حصوں کے درمیان غیر موصل \عددی{\mathrm{SiO_2}} پایا جاتا ہے جس میں برقی رو کا گزر تقریباً ناممکن ہوتا ہے۔حقیقت میں گیٹ میں یک سمتی برقی رو کی مقدار \عددی{10^{-15}} ایمپیئر کے لگ بھگ  ہوتی ہے جو ایک قابلِ نظر انداز مقدار ہے۔
 
 دو جوڑ ٹرانزسٹر کے برعکس میدانی ٹرانزسٹروں میں دونوں \عددی{n+} خطے بالکل یکساں ہوتے ہیں اور ان میں کسی ایک کو بطور سورس اور دوسرے کو ڈرین خطہ استعمال کیا جا سکتا ہے۔ 
 
