--- a/tex/electronicsOPAMP.tex
+++ b/tex/electronicsOPAMP.tex
@@ -143,7 +143,7 @@ v_0 &=A_d \times v_d \\
 \caption{حسابی ایمپلیفائر کا مساوی دور}
 \label{شکل_حسابی_ایمپلیفائر_کا_مساوی_دور}
 \end{figure}
-جیسا کہ شکل سے واضح ہے داخلی جانب سے حسابی ایمپلیفائر بالکل ایک مزاحمت \عددی{R_i} کی طرح معلوم ہوتا ہے جبکہ خارجی جانب  یہ  قابو برقی دباو کی منبع\حاشیہب{controlled voltage source}  جس کے ساتھ سلسلہ وار مزاحمت \عددی{R_o} جڑی ہو معلوم ہوتا ہے۔قابو برقی دباو کی منبع، داخلی جانب مہیا اشارہ \عددی{v_d}سے قابو ہوتا ہے۔
+جیسا کہ شکل سے واضح ہے داخلی جانب سے حسابی ایمپلیفائر بالکل ایک مزاحمت \عددی{R_i} کی طرح معلوم ہوتا ہے جبکہ خارجی جانب  یہ  \اصطلاح{تابع منبع دباو}\فرہنگ{تابع منبع دباو}\حاشیہب{depended voltage source}\فرہنگ{depended voltage source}جس کے ساتھ سلسلہ وار مزاحمت \عددی{R_o} جڑی ہو معلوم ہوتا ہے۔تابع منبع دباو،  داخلی جانب مہیا اشارہ \عددی{v_d} کے تابع ہے۔
 
 	حسابی ایمپلیفائر کے صنعت کاروں کی کوشش ہوتی ہے کہ حسابی ایمپلیفائر کے \اصطلاح{داخلی مزاحمت}\فرہنگ{داخلی مزاحمت} \عددی{R_i} کی قیمت زیادہ سے زیادہ جبکہ  \اصطلاح{خارجی مزاحمت}\فرہنگ{خارجی مزاحمت} \عددی{R_o} کی قیمت کم سے کم ہو۔اسی طرح کوشش کی جاتی ہے کہ \اصطلاح{تفرقی افزائش برقی دباو}\فرہنگ{تفرقی!افزائش برقی دباو}  \عددی{A_d} کی قیمت زیادہ سے زیادہ ہو۔جدول \حوالہ{جدول_حسابی_ایمپلیفائر_عمومی_مقداریں} میں آپ کے اندازے کی خاطر ایک عام دستیاب حسابی ایمپلیفائر\حاشیہد{عام دستیاب ایمپلیفائر کی قیمت بازار میں فروخت ہونے والی  تندور کی دو روٹیوں کے لگ بھگ ہے} کے  ماڈل کے اجزاء دئے گئے ہیں۔
 \begin{table}[ht]
