--- a/tex/myUrduCommandsEMT.tex
+++ b/tex/myUrduCommandsEMT.tex
@@ -15,7 +15,7 @@
 %english text in urdu mode
 \newcommand*{\تحریر}[1]{\textenglish{#1}}	% english text in urduMode
 \newcommand*{\موٹا}[1]{\textbf{#1}}
-\newcommand*{\ترچہ}[1]{{\textit{#1}}}
+\newcommand*{\ترچھا}[1]{{\textit{#1}}}
 \newcommand*{\اصطلاح}[1]{{\color{red}{#1}}}
 
 %end commands cannot be redefined and as such these two are not usable
